Using JS to give custom CSS rules on Safari to fix footer text being too big

--- a/queries.css
+++ b/queries.css
@@ -18,10 +18,6 @@
 		font-size: 15px;
 	}
 
-	#footer {
-		font-size: 8px;
-	}
-
 }
 
 @media only screen and (max-width: 480px) {
